--- a/server/package.json
+++ b/server/package.json
@@ -8,8 +8,11 @@
   "dependencies": {
     "@prisma/client": "6.9.0",
     "@prisma/extension-accelerate": "2.0.2",
+    "@types/express": "^5.0.3",
     "@types/node": "22.15.32",
-    "dotenv": "16.6.1"
+    "cors": "^2.8.5",
+    "dotenv": "16.6.1",
+    "express": "^5.1.0"
   },
   "devDependencies": {
     "prisma": "6.9.0",
