--- a/server/package.json
+++ b/server/package.json
@@ -5,18 +5,22 @@
     "queries": "ts-node ./src/queries.ts",
     "caching": "ts-node ./src/caching.ts"
   },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  },
   "dependencies": {
     "@prisma/client": "6.9.0",
     "@prisma/extension-accelerate": "2.0.2",
     "@types/express": "^5.0.3",
     "@types/node": "22.15.32",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "16.6.1",
     "express": "^5.1.0"
   },
   "devDependencies": {
     "prisma": "6.9.0",
-    "ts-node": "10.9.2",
+    "ts-node": "^10.9.2",
     "typescript": "5.8.2"
   }
 }
