--- a/server/package.json
+++ b/server/package.json
@@ -16,9 +16,11 @@
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "16.6.1",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.10",
     "prisma": "6.9.0",
     "ts-node": "^10.9.2",
     "typescript": "5.8.2"
