--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,8 @@
   "license": "MIT",
   "scripts": {
     "queries": "ts-node ./src/queries.ts",
-    "caching": "ts-node ./src/caching.ts"
+    "caching": "ts-node ./src/caching.ts",
+    "dev": "nodemon --exec ts-node src/server.ts"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.10",
+    "nodemon": "^3.1.10",
     "prisma": "6.9.0",
     "ts-node": "^10.9.2",
     "typescript": "5.8.2"
