--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,6 @@
     "@prisma/client": "6.9.0",
     "@prisma/extension-accelerate": "2.0.2",
     "@types/express": "^5.0.3",
-    "@types/node": "22.15.32",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "16.6.1",
@@ -20,6 +19,7 @@
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/node": "^24.3.0",
     "nodemon": "^3.1.10",
     "prisma": "6.9.0",
     "ts-node": "^10.9.2",
