--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "@types/express": "^5.0.3",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.13",
     "dotenv": "16.6.1",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2"
