feat: add cookie-parser middleware and implement token storage in cookies

--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "@prisma/extension-accelerate": "2.0.2",
     "@types/express": "^5.0.3",
     "bcryptjs": "^3.0.2",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dayjs": "^1.11.13",
     "dotenv": "16.6.1",
@@ -19,6 +20,7 @@
     "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.9",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.3.0",
     "nodemon": "^3.1.10",
