--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "dayjs": "^1.11.13",
     "dotenv": "16.6.1",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.1.0",
     "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
