feat: update environment configuration and enhance CORS settings for improved security and flexibility

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,6 +1,10 @@
 DATABASE_URL=
 SECRET_KEY=
-PORT=
-ADMIN_PASSWORD=
-CASHIER_PASSWORD=
-MANAGER_PASSWORD=
+PORT=3001
+ADMIN_PASSWORD=password
+CASHIER_PASSWORD=password  
+MANAGER_PASSWORD=password
+
+# CORS Configuration
+FRONTEND_URL=
+ADMIN_DASHBOARD_URL=
