--- a/server/package.json
+++ b/server/package.json
@@ -2,12 +2,17 @@
   "name": "minipos-api",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon --exec ts-node src/server.ts"
+    "dev": "nodemon --exec ts-node src/server.ts",
+    "build": "tsc && cp -r node_modules dist/",
+    "start": "node dist/src/server.js",
+    "netlify:dev": "netlify dev",
+    "netlify:build": "npm run build"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
+    "@netlify/functions": "^4.2.7",
     "@prisma/client": "6.9.0",
     "@prisma/extension-accelerate": "2.0.2",
     "@types/express": "^5.0.3",
@@ -18,7 +23,8 @@
     "dotenv": "16.6.1",
     "express": "^5.1.0",
     "express-rate-limit": "^8.1.0",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "serverless-http": "^4.0.0"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.9",
