feat: update Netlify configuration and build script for improved deployment process

--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "nodemon --exec ts-node src/server.ts",
-    "build": "tsc && cp -r node_modules dist/",
+    "build": "tsc",
     "start": "node dist/src/server.js",
     "netlify:dev": "netlify dev",
     "netlify:build": "npm run build"
