--- a/netlify.toml
+++ b/netlify.toml
@@ -1,10 +1,11 @@
 [build]
   base = "server"
-  publish = "server/dist"
+  publish = "dist"
   command = "npm run build"
+  environment = { SECRETS_SCAN_OMIT_PATHS = ".env.example,README.md,prisma/seed.ts,dist/prisma/seed.js" }
 
 [functions]
-  directory = "server/netlify/functions"
+  directory = "netlify/functions"
   node_bundler = "esbuild"
 
 [[redirects]]
