--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "nodemon --exec ts-node src/server.ts",
-    "build": "tsc",
+    "build": "prisma generate && tsc",
+    "postinstall": "prisma generate",
     "start": "node dist/src/server.js",
     "netlify:dev": "netlify dev",
     "netlify:build": "npm run build"
